--- a/docker_scripts/docker-compose-petrol-pump.yaml
+++ b/docker_scripts/docker-compose-petrol-pump.yaml
@@ -3,8 +3,8 @@ version: '3'
 services:
   stg_postgres:
     container_name : docker-stg-db
-    #image: mdillon/postgis
-    image: postgres:15.5
+    image: postgis/postgis:16-3.4
+    #image: postgres:15.5
     expose:
       - "5434" # Publishes 5433 to other containers but NOT to host machine
     ports:
@@ -18,11 +18,12 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
 
-#    healthcheck:
-#      test: ["CMD-SHELL", "pg_isready -U postgres"]
-#      interval: 10s
-#      retries: 5
-#      timeout: 5s
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      retries: 100
+      timeout: 5s
+      start_period: 180s
 
 
     volumes:
@@ -40,7 +41,7 @@ services:
 
     depends_on:
       stg_postgres:
-        condition: service_started
+        condition: service_healthy
 
   dbt:
     image: ghcr.io/dbt-labs/dbt-postgres:1.5.0
